fixed issue with image not aligning to edge

--- a/sass/components/mission.scss
+++ b/sass/components/mission.scss
@@ -117,6 +117,7 @@
 		}
 
 		img{
+			height: inherit;
 			width: 100%;
 		}
 
